--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <button class="btn btn-success">
-    <h1>Hallo Nama Saya Haikal</h1>
+    <h1>Hallo Nama Saya kal</h1>
 </body>
 </html>
