--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="ion-social-facebook"></i></a></li>
           <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+          <li><a href="https://www.instagram.com/mrasyidhaikal/"><i class="ion-social-instagram"></i></a></li>
+          <li><a href="https://plus.google.com/u/0/107630627883368113240"><i class="ion-social-googleplus"></i></a></li>
           <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
           <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
         </ul>
