--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@
 
               <div class="journal-txt">
 
-                <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
+                <h4><a href="blog-single.html">Juara 3 LKS Cabang Web Design And Development</a></h4>
+                <p class="separator">Lomba Ini Adalah Lomba Tahunan Seluruh SMK jadi saingan nya Cukup Berat Tetapi
+                  dengan Usaha dan Doa Orang Tua Saya Bisa Berhasil Meraih Juara 3
                 </p>
 
               </div>
@@ -272,12 +273,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-2.jpg" class="img-responsive" alt="img"></a>
+              <a href="blog-single.html"><img src="images/fol/new2.jpg" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
-                <h4><a href="#blog-single.html">WE'RE GONA MAKE DREAMS COMES</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
+                <h4><a href="#blog-single.html">Juara 2 Lomba Short Movie</a></h4>
+                <p class="separator">Saya juga mengikuti lomba Short Movie pada lomba ini Saya bertugas sebagai penulis
+                  naskah
                 </p>
 
               </div>
