--- a/index.html
+++ b/index.html
@@ -104,10 +104,13 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">Aku Sangat Menyukai Desain Grafis , & Pembuatan Website Baik Itu Front End Ataupun
-              Back End </p>
-            <p class="separator">Karena Saya Sangat Menyukai Bidang Itu, Saya Belajar Dengan Giat , Dan Sungguh-sungguh
-              Agar Kelak Di Masa Yang Akan Datang Saya Bisa Menjadi Orang Yang Dapat Membanggakan Orang Tua</p>
+            <p class="p-heading">Muhammad Rasyid Khaikal</p>
+            <p class="separator">Nama panggilan ku haikal aku lahir di palembang tanggal 19 juli 2001,aku mempunyai
+              saudara laki-laki yang bernama Alfarizi dia adalah teman beramainku dari kecil hingga sekarang.Saat aku
+              duduk di kelas 5 aku pindah ke batam karena papa ku bekerja di Batam,sampai sekarang aku masih tinggal di
+              batam dan kehidupan ku di SMP kulalui dengan bermain main saja karena pada saat itu menurutku SMP itu
+              tidak penting dan pada saat aku masuk SMK aku mulai serius untuk belajar dan mencari prestasi dan
+              alhamdulillah berkat kerja keras dan doa aku banyak mendapatkan prestasi di masa SMK ku ini</p>
 
           </div>
 
