--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>journal</h2>
+        <h2>Prestasi</h2>
       </div>
     </div>
 
@@ -293,12 +293,12 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-3.jpg" class="img-responsive" alt="img"></a>
+              <a href="blog-single.html"><img src="images/fol/arka.jpg" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
-                <h4><a href="blog-single.html">NEW LIFE CIVILIZATIONS TO BOLDLY</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
+                <h4><a href="blog-single.html">10 Terbaik Di Indonesia</a></h4>
+                <p class="separator">Saya Mengikuti Lomba Membuat Website Aplikasi yang bermanfaat untuk masyarakat sekitar pada lomba ini Saya membuat aplikasi yang bernama "Digital Parenting Control" dan berkat aplikasi ini saya bisa lolos ke babak 10 besar 
                 </p>
 
               </div>
