--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio - Personal Portfolio Template</title>
+  <title>Muhammad Rasyid Khaikal</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i"
+  <link
+    href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i"
     rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
@@ -298,7 +299,9 @@
               <div class="journal-txt">
 
                 <h4><a href="blog-single.html">10 Terbaik Di Indonesia</a></h4>
-                <p class="separator">Saya Mengikuti Lomba Membuat Website Aplikasi yang bermanfaat untuk masyarakat sekitar pada lomba ini Saya membuat aplikasi yang bernama "Digital Parenting Control" dan berkat aplikasi ini saya bisa lolos ke babak 10 besar 
+                <p class="separator">Saya Mengikuti Lomba Membuat Website Aplikasi yang bermanfaat untuk masyarakat
+                  sekitar pada lomba ini Saya membuat aplikasi yang bernama "Digital Parenting Control" dan berkat
+                  aplikasi ini saya bisa lolos ke babak 10 besar
                 </p>
 
               </div>
